2006-03-10  Jon A. Cruz  <jon@joncruz.org>

	* src/dialogs/eek-color-def.cpp, src/dialogs/eek-color-def.h,
	  src/dialogs/Makefile_insert, src/dialogs/swatches.h,
	  src/dialogs/swatches.cpp:

	  Bringing in new color class.
	
2006-03-23  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	* packaging/macosx/Resources/bin/inkscape: Fix a packaging
	  problem on Mac OSX where Inkscape wouldn't open if one of the
	  parent directories containing the app bundle contained a '#' in
	  its name.  Fixes bug #1443072.

2006-03-15  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	* share/icons/Makefile.am: Update a makefile after the icon file
	  renaming.

2005-03-14  MenTaLguY  <mental@rydia.net>

	* src/layer-fns.h, src/dialogs/layer-properties.cpp,
	  src/dialogs/layer-properties.h, src/layer-fns.cpp:

	  merged patch #1447043 from Andrius "knutux" R. to create sub-layers

2006-03-14  MenTaLguY  <mental@rydia.net>

	* src/Makefile_insert, src/display/nr-arena-item.cpp,
	  src/display/nr-arena-item.cpp, src/gc-finalized.h, src/gc-managed.h,
	  src/gc-soft-ptr.h, src/selection.h, src/selection.cpp:

	  Replace GC::Managed<>::clearOnceInaccessible with GC::soft_ptr<>

2006-03-14  MenTaLguY  <mental@rydia.net>

	* src/debug/event.h, src/debug/gc-heap.h, src/debug/heap.h,
	  src/debug/logger.cpp, src/debug/simple-event.h,
	  src/debug/sysv-heap.h, src/jabber_whiteboard/deserializer.cpp,
	  src/jabber_whiteboard/message-utilities.cpp,
	  src/jabber_whiteboard/message-utilities.h,
	  src/jabber_whiteboard/node-tracker-observer.h,
	  src/jabber_whiteboard/serializer.cpp,
	  src/jabber_whiteboard/serializer.h,
	  src/sp-object.cpp, src/util/share.cpp, src/util/share.h,
	  src/xml/attribute-record.h, src/xml/comment-node.h,
	  src/xml/composite-node-observer.cpp, src/xml/composite-node-observer.h,
	  src/xml/event.cpp, src/xml/event.h, src/xml/log-builder.cpp,
	  src/xml/log-builder.h, src/xml/node-observer.h, src/xml/repr-io.cpp,