@@ -1,3 +1,11 @@
+2006-03-26  Aaron C. Spike  <aaron@ekips.org>
+
+	* inkscape.pod, src/main.cpp:
+
+	  Added --export-area-canvas (-C). Area specifying options
+	  (--export-area, --export-area-canvas and --export-area-drawing)
+	  can now be used in combination with --export-id.
+
 2006-03-10  Jon A. Cruz  <jon@joncruz.org>
 
 	* src/dialogs/eek-color-def.cpp, src/dialogs/eek-color-def.h,
